BUGFIX Align multiselect on strings view

--- a/media/neno/css/strings.css
+++ b/media/neno/css/strings.css
@@ -35,4 +35,6 @@
 .multiselect-wrapper {
     display: inline-block;
     width: 200px;
+    position: absolute;
+    margin-left: 5px !important;
 }
